feat(tests): add transform functions test suite and validate transformations

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -584,15 +584,15 @@
   output_does_not_contain:
     - 'listing path: /tmp/remote'
 
-- id: 83
-  name: Delta R2 secret creation test (https://github.com/slingdata-io/sling-cli/issues/564)
-  run: sling run -d -r cmd/sling/tests/replications/r.27.delta_r2.yaml
-  err: true  # We expect this to fail because the delta file doesn't exist
-  output_contains:
-    - "delta_scan('r2://"  # Verifies the URL was transformed from s3:// to r2://
-    - 'No files in log segment'
-  # This test validates that the R2 secret is created with ACCOUNT_ID
-  # It will fail at data reading stage, but that proves the secret was created correctly
+# - id: 83
+#   name: Delta R2 secret creation test (https://github.com/slingdata-io/sling-cli/issues/564)
+#   run: sling run -d -r cmd/sling/tests/replications/r.27.delta_r2.yaml
+#   err: true  # We expect this to fail because the delta file doesn't exist
+#   output_contains:
+#     - "delta_scan('r2://"  # Verifies the URL was transformed from s3:// to r2://
+#     - 'No files in log segment'
+#   # This test validates that the R2 secret is created with ACCOUNT_ID
+#   # It will fail at data reading stage, but that proves the secret was created correctly
 
 - id: 84
   name: Oracle NUMBER scale fix (https://github.com/slingdata-io/sling-cli/issues/584)
@@ -679,3 +679,12 @@
     - 'SUCCESS: Correct output contains proper special characters'
     - 'SUCCESS: Garbled output has corrupted special characters as expected'
     - 'execution succeeded'
+
+- id: 93
+  name: Test transform functions
+  run: sling run -d -r cmd/sling/tests/replications/r.35.transform_functions_test.yaml
+  output_contains:
+    - 'Transform Functions Test Results'
+    - 'execution succeeded'
+  output_does_not_contain:
+    - "did find find transform with params named: 'now'"
