improve reader robustness and concurrency
- use unbuffered channel for `nextRow` to improve backpressure
- enhance error handling for channel closure and context cancellation
- update `r.10.yaml` test case to reflect parquet reader changes
- disable duckdb compute in test `r.10.yaml` for isolation

--- a/cmd/sling/tests/replications/r.10.yaml
+++ b/cmd/sling/tests/replications/r.10.yaml
@@ -6,7 +6,8 @@ defaults:
 
 streams:
   test/parquet/*.parquet:
-    single: true
     object: test/parquet/aws_s3.text
     target_options:
       format: csv
+env:
+  SLING_DUCKDB_COMPUTE: false
