fix(api): update stop_condition in pagination to include equal limit check

--- a/api/specs/dbt_cloud.yaml
+++ b/api/specs/dbt_cloud.yaml
@@ -30,7 +30,7 @@ endpoints:
     pagination:
       next_state:
         offset: '{state.offset + state.limit}'
-      stop_condition: length(response.records) < state.limit
+      stop_condition: length(response.records) <= state.limit
 
     response:
       records:
@@ -58,7 +58,7 @@ endpoints:
     pagination:
       next_state:
         offset: "{state.offset + state.limit}"
-      stop_condition: length(response.records) < state.limit
+      stop_condition: length(response.records) <= state.limit
 
     response:
       records:
@@ -87,7 +87,7 @@ endpoints:
     pagination:
       next_state:
         offset: "{state.offset + state.limit}"
-      stop_condition: length(response.records) < state.limit
+      stop_condition: length(response.records) <= state.limit
 
     response:
       records:
