--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -1,6 +1,11 @@
 name: Bump
 
 on:
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'version override'
+        required: false
   pull_request:
     types:
       - closed
@@ -27,4 +32,4 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ github.event.inputs.new_tag }}
+          custom_tag: ${{ github.event.inputs.version }}
