--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -437,9 +437,14 @@
     THREADS=6 MODE=truncate     sling run -r $YAML_FILE -d
     THREADS=1 MODE=backfill     sling run -r $YAML_FILE -d
     SLING_STREAM_CNT=17 THREADS=2 MODE=incremental  sling run -r $YAML_FILE -d
+
+    SLING_STREAM_CNT=2 MODE=full-refresh sling run -r $YAML_EXPR_FILE -d
+    SLING_STREAM_CNT=2 MODE=truncate     sling run -r $YAML_EXPR_FILE -d
+    SLING_STREAM_CNT=2 MODE=incremental  sling run -r $YAML_EXPR_FILE -d
   streams: 32
   env:
     YAML_FILE: cmd/sling/tests/replications/r.20.chunking.yaml
+    YAML_EXPR_FILE: cmd/sling/tests/replications/r.20.chunking.expr.yaml
   output_contains:
     - '"update_dt" >= ''2018-11-21'
     - '"id" >= 601 and "id" <= 800'
@@ -451,6 +456,7 @@
     - ("id" >= 836  # test1k_ducklake_pg, incremental
     - '"id" <= 1002 /* custom-sql */' # test1k_ducklake_pg_sql, incremental
     - '"update_dt" <= ''2019-11-16 20:39:39'' /* custom-sql */' # test1k_duckdb_pg_sql, incremental
+    - ((mod(abs(hashtext(coalesce(first_name, ''))), 2)) = 0) # test1k_mysql_pg, chunk_expr
 
 - id: 71
   name: Run sling pipeline 02
