--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -432,16 +432,16 @@
 
 - id: 70
   name: Run sling chunking
-  run: >
+  run: |
     THREADS=5 MODE=full-refresh sling run -r $YAML_FILE -d
     THREADS=6 MODE=truncate     sling run -r $YAML_FILE -d
     THREADS=1 MODE=backfill     sling run -r $YAML_FILE -d
-    SLING_STREAM_CNT=17 THREADS=2 MODE=incremental  sling run -r $YAML_FILE -d
+    SLING_STREAM_CNT=18 THREADS=2 MODE=incremental  sling run -r $YAML_FILE -d
 
     SLING_STREAM_CNT=2 MODE=full-refresh sling run -r $YAML_EXPR_FILE -d
     SLING_STREAM_CNT=2 MODE=truncate     sling run -r $YAML_EXPR_FILE -d
     SLING_STREAM_CNT=2 MODE=incremental  sling run -r $YAML_EXPR_FILE -d
-  streams: 32
+  streams: 33
   env:
     YAML_FILE: cmd/sling/tests/replications/r.20.chunking.yaml
     YAML_EXPR_FILE: cmd/sling/tests/replications/r.20.chunking.expr.yaml
@@ -457,6 +457,7 @@
     - '"id" <= 1002 /* custom-sql */' # test1k_ducklake_pg_sql, incremental
     - '"update_dt" <= ''2019-11-16 20:39:39'' /* custom-sql */' # test1k_duckdb_pg_sql, incremental
     - ((mod(abs(hashtext(coalesce(first_name, ''))), 2)) = 0) # test1k_mysql_pg, chunk_expr
+    - id <= 500 and ("id" >= 1 and "id" <= 500) # test1k_mysql_pg_sql
 
 - id: 71
   name: Run sling pipeline 02
