fix(replication): update check condition to reference correct run status

--- a/cmd/sling/tests/replications/r.24.starrocks_empty_as_null.yaml
+++ b/cmd/sling/tests/replications/r.24.starrocks_empty_as_null.yaml
@@ -27,7 +27,7 @@ hooks:
 
   end:
     - type: check
-      check: run.status == "success"
+      check: runs.dbo_test_null_values.status == "success"
       on_failure: break
 
     - type: query
