--- a/core/dbio/templates/base.yaml
+++ b/core/dbio/templates/base.yaml
@@ -41,7 +41,7 @@ core:
   column_names: '{sql}'
   enable_trigger: ALTER TABLE {table} ENABLE TRIGGER {trigger}
   disable_trigger: ALTER TABLE {table} DISABLE TRIGGER {trigger}
-  incremental_select: select {fields} from {table} where ({incremental_where_cond}){where_and} order by {update_key} asc
+  incremental_select: select {fields} from {table} where ({incremental_where_cond}){where_and}
   incremental_select_limit: select {fields} from {table} where ({incremental_where_cond}){where_and} order by {update_key} asc limit {limit}
   incremental_select_limit_offset: select {fields} from {table} where ({incremental_where_cond}){where_and} order by {update_key} asc limit {limit} offset {offset}
   incremental_where: '{update_key} {gt} {value}'
